Project

General

Profile

Actions

Bug #44915

closed

amqp delivery guarantees are incorrect

Added by Yuval Lifshitz about 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when setting an amqp topic endpoint to "broker", the code is actually hardcoded to check if message is "routable".
these should be 2 separate levels.
(documentation is here: https://www.rabbitmq.com/confirms.html#publisher-confirms).


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #45782: octopus: amqp delivery guarantees are incorrectResolvedNathan CutlerActions
Actions #1

Updated by Yuval Lifshitz about 4 years ago

  • Pull request ID set to 34376
Actions #2

Updated by Yuval Lifshitz about 4 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Casey Bodley about 4 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Yuval Lifshitz almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45782: octopus: amqp delivery guarantees are incorrect added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF